@@ -1,4 +1,14 @@
 2009-09-19  Ivan Maidanski <ivmai@mail.ru>
+	(ivmai149.diff)
+
+	* dbg_mlc.c (GC_generate_random_backtrace): Call
+	GC_try_to_collect(GC_never_stop_func) instead of GC_gcollect();
+	if GC is disabled then print error message and return.
+	* include/gc.h (GC_try_to_collect): Refine the comment.
+	* include/private/gc_priv.h (GC_never_stop_func): Fix return type;
+	refine the comment.
+
+2009-09-19  Ivan Maidanski <ivmai@mail.ru>
 	(ivmai147.diff)
 
 	* add_gc_prefix.c: Move the file to the new "extra" directory.
